--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,4 @@ board = esp32doit-devkit-v1
 framework = arduino
 upload_port = COM6
 monitor_speed = 115200
-lib_deps = 
-	chuckbell/MySQL Connector Arduino@^1.2.0
+lib_deps = chuckbell/MySQL Connector Arduino@^1.2.0
